--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-api-boilerplate",
   "version": "0.0.1",
-  "description": "Koa API-boilerplate",
+  "description": "A Boilerplate for modern API's with Koa",
   "keywords": [
     "Koa",
     "Koajs",
