--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "Debug",
     "Koa",
     "Koajs",
-    "Koa router",
+    "Koa better-router",
     "Babel",
     "ES6"
   ],
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "dotenv": "^4.0.0",
+    "koa": "^2.3.0",
+    "koa-better-router": "^2.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
