--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "koa": "^2.3.0",
-    "koa-better-router": "^2.1.1"
+    "koa-better-router": "^2.1.1",
+    "koa-cors": "0.0.16"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
