--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^4.0.0",
     "koa": "^2.3.0",
     "koa-better-router": "^2.1.1",
-    "koa-cors": "0.0.16"
+    "koa-cors": "0.0.16",
+    "koa-helmet": "^3.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
