--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^4.0.0",
     "koa": "^2.3.0",
     "koa-better-router": "^2.1.1",
+    "koa-bodyparser": "^4.2.0",
     "koa-cors": "0.0.16",
     "koa-helmet": "^3.2.0"
   },
@@ -46,6 +47,9 @@
       "stage-0"
     ],
     "plugins": [
+      [
+        "transform-async-to-generator"
+      ],
       [
         "module-resolver",
         {
